--- a/apps/web/src/app/vault/individual-vault/add-edit.component.html
+++ b/apps/web/src/app/vault/individual-vault/add-edit.component.html
@@ -191,12 +191,18 @@
               </button>
             </div>
           </div>
-          <ng-container *ngIf="cipher.login.hasFido2Credentials">
-            <div class="row">
-              <div class="col-6 form-group">
+          <pre>
+            {{ passkeyRemovedAnnouncement }}
+          </pre>
+          <div aria-live="polite" *ngIf="passkeyRemovedAnnouncement" class="sr-only">
+            {{ "passkeyRemoved" | i18n }}
+          </div>
+          <ng-container>
+            <div class="tw-flex tw-flex-row" *ngIf="cipher.login.hasFido2Credentials">
+              <div class="tw-mb-4 tw-w-1/2">
                 <label for="loginFido2credential">{{ "typePasskey" | i18n }}</label>
                 <div
-                  class="input-group"
+                  class="tw-flex tw-flex-row"
                   tabindex="0"
                   attr.aria-label="{{ 'typePasskey' | i18n }} {{
                     fido2CredentialCreationDateValue
@@ -212,6 +218,15 @@
                     disabled
                     readonly
                   />
+                  <button
+                    type="button"
+                    class="tw-items-center tw-border-none tw-bg-transparent tw-text-danger tw-ml-3"
+                    appA11yTitle="{{ 'removePasskey' | i18n }}"
+                    (click)="removePasskey()"
+                    *ngIf="!cipher.isDeleted && !viewOnly"
+                  >
+                    <i class="bwi bwi-lg bwi-minus-circle"></i>
+                  </button>
                 </div>
               </div>
             </div>
